Prevent scrollbar container to get a 0px height

--- a/src/scss/_site.scss
+++ b/src/scss/_site.scss
@@ -53,15 +53,8 @@ img {
 .text-primary-color {
 	color: $text-primary-color;
 }
-.sidenav {
-	// @media (max-width: 991px) {
-	//   width: 0;
-	//   min-width: auto;
-	//   &.sidenav-slim-collapsed {
-	//     min-width: 300px;
-	//     width: auto;
-	//   }
-	// }
+.sidenav .scrollbar-container.ps {
+	height: 737px !important;
 }
 .sidenav-item a {
 	font-size: 16px;
